--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "terminaate.github.io",
+  "name": "vbersenev",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -38,5 +38,17 @@
     "terser": "^5.15.1",
     "typescript": "^4.6.3",
     "vite": "^3.2.4"
-  }
+  },
+  "main": ".hygen.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vbersenev72/MyResume2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vbersenev72/MyResume2/issues"
+  },
+  "homepage": "https://github.com/vbersenev72/MyResume2#readme",
+  "description": ""
 }
