edit button color, updated projects list

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "eslint ./src/**/* --fix",
     "format": "prettier --write ./src/**/*",
     "dev": "vite --host 0.0.0.0",
+    "start": "vite",
     "build": "tsc && vite build",
     "new:util": "hygen new util",
     "new:hook": "hygen new hook",
